force-app/main/default/objects/Event__c/fields/Created_By_User__c.field-meta.xml
<CustomField>
    <fullName>Created_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>