force-app/main/default/objects/Event__c/fields/Current_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Current_Attendees__c</fullName>
    <label>Current Attendees</label>
    <summaryForeignKey>Event_Registration__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>