force-app/main/default/objects/Event__c/fields/current_registered_event__c.field-meta.xml
<CustomField>
    <fullName>current_registered_event__c</fullName>
    <label>current registered event</label>
    <summaryFilterItems>
        <field>Event_Registration__c.Status__c</field>
        <operation>equals</operation>
        <value>Registered</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Registration__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>