force-app/main/default/objects/Event__c/fields/Event_date__c.field-meta.xml
<CustomField>
    <fullName>Event_date__c</fullName>
    <label>Event date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>