force-app/main/default/objects/Event__c/fields/Max_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Max_Attendees__c</fullName>
    <label>Max Attendees</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>